=======
CHANGES
=======

3.6.0 (unreleased)
------------------

- Some of ZCML configuration was moved into another packages:

   * The global INegotiator utility registration was moved into ``zope.i18n``.
   * The include of ``zope.i18n.locales`` was also moved into ``zope.i18n``.
   * The registration of IModifiableUserPreferredLanguages adapter was moved
     into ``zope.app.publisher``.
   * The IAttributeAnnotation implementation statement for HTTPRequest was moved
     into ``zope.publisher`` and will only apply if ``zope.annotation`` is
     available.
   * The IUserPreferredCharsets adapter registration was also moved into
     ``zope.publisher``.

- Depend on zope.component >= 3.6 instead of zope.app.component as the
  `queryNextUtility` function was moved there. 

3.5.0 (2009-02-01)
------------------

- Use zope.container instead of zope.app.container.

3.4.6 (2009-01-27)
------------------

- Fix a simple inconsistent MRO problem in tests

- Substitute zope.app.zapi by direct calls to its wrapped apis. See bug
  219302.

3.4.5 (unreleased)
------------------

- This was skipped over by accident.

3.4.4 (2007-10-23)
------------------

- Fix deprecation warning.

3.4.3 (2007-10-23)
------------------

- Fix imports in tests.

- Clean up long lines.

3.4.2 (2007-9-26)
-----------------

- Release to fix packaging issues with 3.4.1.

3.4.1 (2007-9-25)
-----------------

- Added missing Changes.txt and README.txt files to egg

3.4.0 (2007-9-25)
-----------------

- Initial documented release

- Move ZopeMessageFactory to zope.i18nmessageid